# Colorpicker-free

./: COMPLETE_ENGLISH_TRANSLATIONS.md  COMPLETE_REFACTORING_REPORT.md  COMPLETE_SOLUTION.md  COMPLETE_TRANSLATION_GUIDE.md  DEEP_REFACTORING_REPORT.md  DEPENDENCIES.md  FINAL_HOTKEY_FIX.md  FIXED_TRANSLATION_SYSTEM.md  HOTKEY_FIX.md  KEYBOARD_STABILITY_FIX.md  LANGUAGE_SUPPORT.md  LAUNCH.md  LICENSE  MIGRATION.md  PERSISTENT_HOTKEYS_SOLUTION.md  README.md  README_EN.md  README_LANGUAGE.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  SIGNAL_CONNECTION_FIX.md  WINDOW_PRIORITY_FIXES.md  WINDOW_SIZE_FIX.md  alternative_hotkeys.py  debug_keyboard.py  desktop_picker.py  example.py  final_cleanup_report.md  final_solution.py  final_test.py  fix_dependencies.py  fix_numpy.py  fix_qt.py  force_init.py  install_deps.py  logger.py  main.py  pyproject.toml  quick_test.py  requirements.txt  (+27 more)
app/: __init__.py  __main__.py  color_utils.py  colorpicker.py  compat.py  config.py  constants.py  enhanced_picker.py  exceptions.py  facade.py  i18n.py  img.py  picker.py  screen_picker.py  simple_picker.py  styles.py  types.py  ui_dark.py  ui_light_alpha.py  ui_updater.py  validators.py
app/application/: __init__.py
app/application/services/: __init__.py  color_state_service.py
app/core/: __init__.py  color_engine.py  event_system.py  hotkeys.py  settings_manager.py  state.py  ui_manager.py  utils.py
app/data/: config.py  settings.db
app/domain/: __init__.py
app/domain/services/: __init__.py  color_converter_service.py
app/domain/value_objects/: __init__.py  hex_color.py  hsv_color.py  rgb_color.py
app/presentation/: __init__.py
app/presentation/dialogs/: __init__.py  color_picker.py  enhanced_color_picker.py  legacy_color_picker.py  screen_color_picker.py  simple_color_picker.py
app/shared/: __init__.py  compat.py  exceptions.py  exceptions_legacy.py  types.py  validators.py
app/shared/utils/: __init__.py  auto_install.py  color_utils.py
app/ui/: __init__.py  context_menu.py  ui_dark_alpha.ui
app/ui/components/: __init__.py  context_menu.py  ui_updater.py
app/ui/resources/: __init__.py  img.py
app/ui/ui/: __init__.py  ui_dark.py  ui_dark.ui  ui_dark_alpha.py  ui_light.py  ui_light.ui  ui_light_alpha.py  ui_light_alpha.ui
app/utils/: __init__.py
examples/: advanced_usage.py  simple_window_examples.py  window_priority_examples.py
scripts/: dev_setup.py  install_deps.py  install_keyboard.py
tests/: __init__.py  debug_keyboard.py  test_color_utils.py  test_enhanced_picker.py
